# learning_opengl

./: CMakeLists.txt  configure.sh
shaders/: .light.fs.swp  blend.fs  fragment.fs  light.fs  light.vs  model.fs  vertex.vs
shaders/chapters_shaders/: directional_light.fs  flashlight.fs  fragment.fs  point_light.fs  simple_light.fs  simple_light.vs  simple_light_with_material.fs  vertex.vs
src/: .main.cpp.swp  flycamera.cpp  main.cpp  texture_rect.cpp
src/camera/: camera.cpp  camera.h  flyCamera.cpp  flyCamera.h
src/chapters_code/: blend.cpp  changing_color_square.cpp  colorful_triangle_with_shader_class.cpp  hello_triangle.cpp  light_casters.cpp  model_with_lights.cpp  multi_lights.cpp  multi_lights_with_classes.cpp  transforms.cpp
src/cube/: cube.cpp  cube.h
src/lights/: directionalLight.cpp  directionalLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
src/mesh/: mesh.cpp  mesh.h
src/model/: model.cpp  model.h
src/shader/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
src/texture2d/: texture2d.cpp  texture2d.h
src/transform/: transform.cpp  transform.h
src/utils/: utils.cpp  utils.h
src/window/: window.cpp  window.h
